# justask-qt-client

./: CMakeLists.txt  README.md  answerwidget.cpp  answerwidget.h  answerwidget.ui  justask-qt-client.kdev4  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  questionwidget.cpp  questionwidget.h  questionwidget.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
cmake/: FindQJSON.cmake
translations/: de.ts
